2009-08-05  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.53

	* matchbox/core/mb-wm-decor.c (mb_wm_decor_button_press_handler):
	Don't crash if the decor or its parent has been destroyed.
	Fixes: NB#131123 - Desktop crashes observed when tapping on 'back'
	button quickly on various applications

2009-07-29  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-util.c (error_handler):
	  Gift to those who know the cheat code: print symbolic names
	  of X errors and requests, so perhaps there'll be more motivation
	  to track them down.

2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-client-window.c
	  (mb_wm_client_window_sync_properties):
	  Blogged about the monster hack.

2009-07-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.52

2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Diagnostic improvements.

	* matchbox/core/mb-wm-util.c (error_handler):
	  g_debug() more information in case of an XErrorEvent.
	* matchbox/core/mb-wm-client-base.c (mb_wm_client_base_realize):
	  Leave a note that we're screwing up if we're about to
	  create 0x0 windows (a.k.a. "invisible windows" symptom).

2009-07-28  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c (mb_wm_handle_property_notify):
	  Detect changes to MBWM_ATOM_MAEMO_SUPPRESS_ROOT_RECONFIGURATION
	  via property state rather than a toggle.  Requires newer
	  hildon-desktop.

2009-07-28  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.51

	* matchbox/core/mb-wm-client-window.c: Put the monster hack back, it
	is still needed for 800x480 windows...

2009-07-27  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Robustness improvement: warn if we can't read theme.xml and create
	a compositing theme as a fallback, so we don't crash and burn when
	starting to manage existing clients in mb_wm_init().

	* matchbox/theme-engines/mb-wm-theme.c (mb_wm_theme_new)
