@@ -1,6 +1,8 @@
 matchbox-window-manager-2 (0.2.54-1~unreleased) unstable; urgency=low
 
-  * foo
+  Kimmo:
+  * Fixes: NB#130995 - In certain scenario taps land on window below the
+    application
 
  -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed,  5 Aug 2009 10:38:21 +0300
 
